--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.1.1
-Flask-SQLAlchemy==2.5.1
+Flask==3.0.2
+Flask-SQLAlchemy==3.0.2
 Flask-Cors==3.0.10
-Flask-JWT-Extended==4.3.1
+Flask-JWT-Extended==4.6.0
+Flask Werkzeug==3.0.1
